[package]
name = "fftconvolve"
version = "0.1.0"
edition = "2021"
authors = ["Rhys JP Newell <rhys.newell94 at gmail.com>"]
license-file = "LICENSE"
description = "The fast fourier transform convolution and correlation algorithm for Rust"
homepage = "https://github.com/rhysnewell/fftconvolve"
repository = "https://github.com/rhysnewell/fftconvolve"
documentation = "https://github.com/rhysnewell/fftconvolve"
readme = "README.md"
keywords = ["fft", "convolution", "correlation", "signal-processing"]
categories = ["science::mathematics", "science::engineering", "science::signal-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
num-traits = "0.2.14"
num = "0.4.0"
easyfft = "0.2.3"
