[package]
name = "fftconvolve"
version = "0.1.1"
edition = "2021"
authors = ["Rhys JP Newell <rhys.newell94 at gmail.com>"]
license-file = "LICENSE"
description = "The fast fourier transform convolution and correlation algorithm for Rust"
homepage = "https://github.com/rhysnewell/fftconvolve"
repository = "https://github.com/rhysnewell/fftconvolve"
documentation = "https://github.com/rhysnewell/fftconvolve"
readme = "README.md"
keywords = ["fft", "convolution", "correlation", "signal-processing"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "^0.15"
ndarray-linalg = "^0.16"
num-traits = "^0.2"
num = "^0.4"
easyfft = "^0.2"
